# sipp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py
front/public/: func.js  index.html  style.css
front/public/js_func/: chat.js  main.js
src/api/: __init__.py
src/api/endpoints/: auth.py  chat_socket.py  sender_kp.py
src/api/endpoints/helper/chat_manager/: __init__.py  chat_rules.py  meneger_connect.py  model.py
src/api/endpoints/helper/generator_secret_key/: __init__.py  create_secret_key.py
src/api/endpoints/template/: template_data.py  template_email.html
src/smtp_conf/: __init__.py  smtp_gmail.py
