[tool.poetry]
name = "sipp"
version = "0.1.0"
description = ""
authors = ["Ola Amigo <olyabjj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
celery = "^5.3.6"
jinja2 = "^3.1.2"
httpx = "^0.25.0"
aiofiles = "^24.1.0"
loguru = "^0.7.0"
itsdangerous = "^2.2.0"
PyJWT = "^2.8.0"
bitrix24-python3-client = "^0.4.0"
sentry-sdk = "^1.34.0"
starlette = "^0.49.1"
python-dotenv = "^1.0.0"
fastapi = ">=0.109.1"
requests = ">=2.28.1"
SQLAlchemy = ">=1.4.35"
PyMySQL = ">=1.0.2"
redis = ">4.5.5"
mysql-connector-python = ">8.0.23"
tenacity = "^8.0.0"
PyBitrix = "^1.1.4"
apscheduler = "^3.10.0"
Babel = "^2.14.0"
sendgrid = "^6.12.5"
watchdog = {extras = ["watchmedo"], version = "^4.0.0"}
uvicorn = {extras = ["standard"], version = ">=0.24.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
addopts = "--disable-warnings"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning"
]
asyncio_mode = "auto"